--- a/.github/workflows/check-solutions.yml
+++ b/.github/workflows/check-solutions.yml
@@ -1,17 +1,20 @@
 name: Check Solutions
 
 on:
-  push
+  push:
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: "3.8"
+
       - name: Check Solutions
         run: ${{ github.workspace }}/.github/scripts/check-solutions.sh
         shell: bash
