--- a/.github/workflows/release-to-dist.yml
+++ b/.github/workflows/release-to-dist.yml
@@ -5,31 +5,37 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: read
+
 jobs:
   release:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: "3.11"
 
-      - name: Install build
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install build
 
-      - name: Build wheel
-        run: python -m build --wheel
+      - run: python -m build --wheel
 
-      - name: Upload wheel to public dist repo
+      - name: Get GitHub App token
+        id: app-token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.DIST_APP_ID }}
+          private_key: ${{ secrets.DIST_APP_PRIVATE_KEY }}
+
+      - name: Create release + upload wheel to dist repo
         uses: softprops/action-gh-release@v2
         with:
           repository: WincAcademy/wincpy-dist
           tag_name: ${{ github.ref_name }}
           files: dist/*.whl
         env:
-          GITHUB_TOKEN: ${{ secrets.DIST_REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
